crates/test-files/fixtures/compile_errors/invalid_chain_field.fe
contract Foo {
    pub fn foo() {
        chain.foo
    }
}
